feat: 勤怠一覧の詳細カレンダーにおける打刻元カラムへ打刻端末の登録名を表示するよう対応
