# src/kint/models/attendance.py
@@ -39,6 +39,7 @@ class Attendance(Base):
     source: Mapped[str] = mapped_column(String, nullable=False)
     updated_reason: Mapped[str | None] = mapped_column(String, nullable=True)
     overtime_reason: Mapped[str | None] = mapped_column(String, nullable=True)
+    device_name: Mapped[str | None] = mapped_column(String, nullable=True)
     is_auto_completed: Mapped[bool] = mapped_column(
         Boolean, default=False, server_default="0", nullable=False
     )
